# advent_of_code

./: README.md
2023/1/: a.py  b.py  test_input_b.txt
2023/16/: a.py  iz.py
2023/2/: a.py  b.py
2023/3/: a.py  b.py
2023/4/: a.py
2023/5/: a.py  b.py
2023/6/: main.dfy  shell.nix
2023/9/: a.py  b.py
2024/1/day1/src/: main.rs
2024/1/src/: main.rs
2024/2/: Cargo.toml
2024/2/src/: main.rs
2025/eight/: Cargo.toml
2025/eight/src/: lib.rs
2025/five/: .gitignore  Cargo.toml
2025/five/src/: bench.rs  lib.rs  main.rs
2025/four/src/: lib.rs
2025/nine/: Cargo.toml
2025/nine/src/: lib.rs
2025/one/: Cargo.toml
2025/one/benches/: my_benchmark.rs
2025/one/src/: lib.rs  main.rs
2025/seven/: Cargo.toml  test_input copy.txt
2025/seven/src/: lib.rs
2025/six/src/: lib.rs
2025/ten/: Cargo.toml  shell.nix
2025/ten/src/: lib.rs
2025/three/src/: lib.rs
2025/two/src/: lib.rs
